
* ``TestResultDecorator.tags()`` now actually works, and is no longer a buggy
  copy/paste of ``TestResultDecorator.time()``. (Jonathan Lange, #681828)

* Add ``TimeCollapsingDecorator`` which collapses multiple sequential time()
  calls into just the first and last. (Jonathan Lange)

* Add ``TagCollapsingDecorator`` which collapses many tags() calls into one
  where possible. (Jonathan Lange)

0.0.6
-----

This release of subunit fixes a number of unicode related bugs. This depends on
testtools 0.9.4 and will not function without it. Thanks to Tres Seaver there
is also an optional native setup.py file for use with easy_install and the
like.

BUG FIXES
~~~~~~~~~

* Be consistent about delivering unicode content to testtools StringException
  class which has become (appropriately) conservative. (Robert Collins)

* Fix incorrect reference to subunit_test_failf in c/README.
  (Brad Hards, #524341)

* Fix incorrect ordering of tags method parameters in TestResultDecorator. This
  is purely cosmetic as the parameters are passed down with no interpretation.
  (Robert Collins, #537611)

* Old style tracebacks with no encoding info are now treated as UTF8 rather
  than some-random-codec-like-ascii. (Robert Collins)

* On windows, ProtocolTestCase and TestProtocolClient will set their streams to
  binary mode by calling into msvcrt; this avoids having their input or output
  mangled by the default line ending translation on that platform.
  (Robert Collins, Martin [gz], #579296)

IMPROVEMENTS
~~~~~~~~~~~~

* Subunit now has a setup.py for python deployments that are not using
  distribution packages. (Tres Seaver, #538181)

* Subunit now supports test discovery by building on the testtools support for
  it. You can take advantage of it with "python -m subunit.run discover [path]"
  and see "python -m subunit.run discover --help" for more options.

* Subunit now uses the improved unicode support in testtools when outputting