@@ -88,6 +88,18 @@ xfail todo
             filtered_result.failures])
         self.assertEqual(3, filtered_result.testsRun)
 
+    def test_fixup_expected_failures(self):
+        filtered_result = unittest.TestResult()
+        result_filter = TestResultFilter(filtered_result,
+            fixup_expected_failures=set(["failed"]))
+        self.run_tests(result_filter)
+        self.assertEqual(['failed', 'todo'],
+            [error[0].id() for error in filtered_result.expectedFailures])
+        self.assertEqual([],
+            [failure[0].id() for failure in
+            filtered_result.failures])
+        self.assertEqual(4, filtered_result.testsRun)
+
     def test_exclude_failure(self):
         filtered_result = unittest.TestResult()
         result_filter = TestResultFilter(filtered_result, filter_failure=True)
